hphp/test/zend/bad/ext/standard/tests/network/socket_get_status_basic.php
<?php

for ($i=0; $i<100; $i++) {
  $port = rand(10000, 65000);
  /* Setup socket server */
  $server = @stream_socket_server("tcp://127.0.0.1:$port");
  if ($server) {
    break;
  }
}

var_dump(socket_get_status($server));
fclose($server);

?>